# py_nml

./: .gitignore  README.md  pyproject.toml
src/py_nml/: parse.py
tests/: test_nml1.py
