[project]
name = "py_nml"
version = "1.0"
authors = [
  { name="Nickolay Chistov", email="nikola-chistov@mail.ru" },
]
description = "Python NML parser"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nchistov/py_nml"
"Bug Tracker" = "https://github.com/nchistov/py_nml/issues"
